--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PAES Connect</title>
+    <title>PES Connect</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">PAES Connect</a>
+      <a class="navbar-brand" href="#">PAS Connect</a>
       <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,9 +49,9 @@
                   <h2>Seja muito bem-vindo(a)</h2>
                   <p>Bem-vindo ao PAES Connect! <br>
 
-                   <br> Este é um espaço criado especialmente para estudantes do PAES, um programa de ingresso de grande importância para diversas universidades brasileiras. Sabemos que se preparar para o PAES pode ser desafiador, mas acreditamos que a jornada para o sucesso acadêmico pode ser mais fácil quando compartilhamos conhecimentos e nos conectamos com outros estudantes.<br>
+                   <br> Este é um espaço criado especialmente para estudantes do PAS, um programa de ingresso de grande importância para diversas universidades brasileiras. Sabemos que se preparar para o PAES pode ser desafiador, mas acreditamos que a jornada para o sucesso acadêmico pode ser mais fácil quando compartilhamos conhecimentos e nos conectamos com outros estudantes.<br>
                     
-                    <br>No PAES Connect, você encontrará uma comunidade acolhedora e recursos úteis para ajudá-lo a se preparar para o exame. Nossa plataforma oferece uma variedade de ferramentas, como fóruns de discussão, materiais de estudo, dicas e orientações de professores experientes, entre outras coisas.<br></p>
+                    <br>No PAS Connect, você encontrará uma comunidade acolhedora e recursos úteis para ajudá-lo a se preparar para o exame. Nossa plataforma oferece uma variedade de ferramentas, como fóruns de discussão, materiais de estudo, dicas e orientações de professores experientes, entre outras coisas.<br></p>
                     
               </div>
 
@@ -92,7 +92,7 @@
         <h2>Sobre nós</h2>
       </div><!--custom-title-->
 
-      <p>O PAES Connect é um site criado por estudantes experientes com o objetivo de ajudar outros estudantes que estão se preparando para o PAES. Nossa equipe é formada por pessoas que já passaram pelo processo de preparação para o exame e entendem os desafios que os estudantes enfrentam.<br>
+      <p>O PAS Connect é um site criado por estudantes experientes com o objetivo de ajudar outros estudantes que estão se preparando para o PAES. Nossa equipe é formada por pessoas que já passaram pelo processo de preparação para o exame e entendem os desafios que os estudantes enfrentam.<br>
 
         <br>Nosso principal objetivo é criar um ambiente online onde os estudantes possam se conectar, compartilhar informações e recursos, e receber orientações de professores experientes. Nossa plataforma oferece uma ampla variedade de recursos, desde materiais de estudo e dicas até fóruns de discussão e orientações personalizadas.</p>
 
@@ -113,7 +113,7 @@
                 <h4 class="modal-title">Nossa História</h4>
               </div>
               <div class="modal-body">
-                <p><br>O PAES Connect foi criado em 2021 por um grupo de estudantes universitários que passaram pelo processo de preparação para o PAES. Eles perceberam que os estudantes do PAES muitas vezes têm dificuldade em encontrar recursos e informações confiáveis para ajudá-los a se preparar para o exame.
+                <p><br>O PAS Connect foi criado em 2021 por um grupo de estudantes universitários que passaram pelo processo de preparação para o PAES. Eles perceberam que os estudantes do PAES muitas vezes têm dificuldade em encontrar recursos e informações confiáveis para ajudá-los a se preparar para o exame.
 
                   <br>Com isso em mente, eles decidiram criar uma plataforma online que reunisse todos os recursos necessários para os estudantes se prepararem para o exame, além de oferecer um ambiente de comunidade e colaboração entre os próprios estudantes. E assim nasceu o PAES Connect.</p>
               </div>
@@ -214,7 +214,7 @@
           <div class="row">
             <div class="col-md-6">
             <h2>Nossa história</h2>
-            <p>O PAES Connect foi criado em 2021 por um grupo de estudantes universitários que passaram pelo processo de preparação para o PAES. 
+            <p>O PAS Connect foi criado em 2021 por um grupo de estudantes universitários que passaram pelo processo de preparação para o PAES. 
               <br>Nós percebemos que os estudantes do PAES muitas vezes têm dificuldade em encontrar recursos e informações confiáveis para ajudá-los a se preparar para o exame.
 <br>Com isso em mente, decidimos criar uma plataforma online que reunisse todos os recursos necessários para os estudantes se prepararem para o exame, além de oferecer um ambiente de comunidade e colaboração entre os próprios estudantes. <br>E assim nasceu o PAES Connect.
 
@@ -245,7 +245,7 @@
     </footer>
 
     <footer style="background:#444;padding:8px 0;" class="text-center">
-      <p style="margin: 0;">Todos os direitos reservados, PAES Connect.</p>
+      <p style="margin: 0;">Todos os direitos reservados, PAS Connect.</p>
     </footer>
 
 
